@@ -13,10 +13,13 @@ What's New in astroid 3.3.6?
 ============================
 Release date: TBA
 
+* Fix inability to import `collections.abc` in python 3.13.1.
+
+  Closes pylint-dev/pylint#10112
+
 * Fix crash when typing._alias() call is missing arguments.
 
   Closes #2513
-
 
 
 What's New in astroid 3.3.5?
